[package]
name = "zangy"
version = "0.1.0-dev"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
description = "A fast redis library written in Rust"
edition = "2018"
license = "MIT"
repository = "https://github.com/Gelbpunkt/zangy"
homepage = "https://github.com/Gelbpunkt/zangy"
readme = "README.rst"
keywords = ["fast", "redis"]
include = [
    "Cargo.toml",
    "README.rst",
    "src/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zangy"
crate-type = ["cdylib"]

[package.metadata.maturin]
requires-python = ">=3.8"
classifier = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[dependencies]
pyo3 = { version = "0.11.1", features = ["extension-module"] }


[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "thin"
opt-level = 3
panic = "abort"

[profile.release.build-override]
opt-level = 0
