[package]
name = "zangy"
version = "0.1.2"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
description = "A fast redis library written in Rust"
edition = "2021"
license = "MIT"
repository = "https://github.com/Gelbpunkt/zangy"
homepage = "https://github.com/Gelbpunkt/zangy"
readme = "README.md"
keywords = ["fast", "redis"]
include = ["Cargo.toml", "README.md", "src/*", "pyproject.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zangy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { git = "https://github.com/PyO3/pyo3", default-features = false, features = [
    "macros",
    "extension-module",
    "nightly"
] }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
] }
redis = { git = "https://github.com/mitsuhiko/redis-rs", default-features = false, features = [
    "tokio-comp"
] }
futures-util = { version = "0.3", default-features = false }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
